scripts/nullaway/original/url4e79c36700_JacenLakiir_Tivoo_tgz-pJ8-MainJ8.txt
../original/url4e79c36700_JacenLakiir_Tivoo_tgz-pJ8-MainJ8/src/tivoo/Event.java:9: error: [NullAway] @NonNull field title not initialized
    private String title;
                   ^
    (see http://t.uber.com/nullaway )
../original/url4e79c36700_JacenLakiir_Tivoo_tgz-pJ8-MainJ8/src/tivoo/Event.java:10: error: [NullAway] @NonNull field description not initialized
    private String description;
                   ^
    (see http://t.uber.com/nullaway )
../original/url4e79c36700_JacenLakiir_Tivoo_tgz-pJ8-MainJ8/src/tivoo/Event.java:11: error: [NullAway] @NonNull field startTime not initialized
    private Calendar startTime;
                     ^
    (see http://t.uber.com/nullaway )
../original/url4e79c36700_JacenLakiir_Tivoo_tgz-pJ8-MainJ8/src/tivoo/Event.java:12: error: [NullAway] @NonNull field endTime not initialized
    private Calendar endTime;
                     ^
    (see http://t.uber.com/nullaway )
../original/url4e79c36700_JacenLakiir_Tivoo_tgz-pJ8-MainJ8/src/tivoo/Event.java:13: error: [NullAway] @NonNull field location not initialized
    private String location;
                   ^
    (see http://t.uber.com/nullaway )
../original/url4e79c36700_JacenLakiir_Tivoo_tgz-pJ8-MainJ8/src/tivoo/input/parserHandler/TVParserHandler.java:20: error: [NullAway] initializer method does not guarantee @NonNull fields currentEvent (line 15), currentCalendar (line 16) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public TVParserHandler ()
           ^
    (see http://t.uber.com/nullaway )
../original/url4e79c36700_JacenLakiir_Tivoo_tgz-pJ8-MainJ8/src/tivoo/input/parserHandler/DukeCalParserHandler.java:18: error: [NullAway] initializer method does not guarantee @NonNull fields currentEvent (line 14), currentCalendar (line 15) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public DukeCalParserHandler ()
           ^
    (see http://t.uber.com/nullaway )
../original/url4e79c36700_JacenLakiir_Tivoo_tgz-pJ8-MainJ8/src/tivoo/input/parserHandler/NFLCalParserHandler.java:18: error: [NullAway] initializer method does not guarantee @NonNull fields currentEvent (line 13), currentCalendar (line 15) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public NFLCalParserHandler ()
           ^
    (see http://t.uber.com/nullaway )
../original/url4e79c36700_JacenLakiir_Tivoo_tgz-pJ8-MainJ8/src/tivoo/input/parserHandler/DukeBasketballCalHandler.java:20: error: [NullAway] initializer method does not guarantee @NonNull fields currentEvent (line 13), currentDate (line 15), currentTime (line 16), currentCalendar (line 17) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public DukeBasketballCalHandler ()
           ^
    (see http://t.uber.com/nullaway )
../original/url4e79c36700_JacenLakiir_Tivoo_tgz-pJ8-MainJ8/src/tivoo/input/parserHandler/GoogleCalParserHandler.java:21: error: [NullAway] initializer method does not guarantee @NonNull fields currentEvent (line 16), startCalendar (line 17), endCalendar (line 18), recurringTime (line 67) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public GoogleCalParserHandler ()
           ^
    (see http://t.uber.com/nullaway )
../original/url4e79c36700_JacenLakiir_Tivoo_tgz-pJ8-MainJ8/src/tivoo/output/HorizontalViewHTMLBuilder.java:69: error: [NullAway] passing @Nullable parameter 'eventsOnThisDay' where @NonNull is required
            Td dayCal = buildHorizontalDayCalendar(day, eventsOnThisDay);
                                                        ^
    (see http://t.uber.com/nullaway )
../original/url4e79c36700_JacenLakiir_Tivoo_tgz-pJ8-MainJ8/src/tivoo/output/VerticalViewHTMLBuilder.java:30: error: [NullAway] passing @Nullable parameter 'eventsOnThisDay' where @NonNull is required
            Div dayInfo = constructVerticalDayDiv(day, eventsOnThisDay);
                                                       ^
    (see http://t.uber.com/nullaway )
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: ../original/url4e79c36700_JacenLakiir_Tivoo_tgz-pJ8-MainJ8/src/tivoo/input/CalendarParser.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
12 errors
